fix commit view

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -11,10 +11,10 @@
         <commit>
           <top>
             <author><Author></author>
-            <span>parent <For Parents><a href="<Parent_URI>"><Parent_Sha_Short></a> </For></span>
+            <span>parent <For Parents><a href="<ParentUri>"><ParentShaShort></a> </For></span>
           </top>
           <data>
-            <a href="<Sha_URI>"><Sha_Short></a><br>
+            <a href="<ShaUri>"><ShaShort></a><br>
             <Title><br><br>
             <Body>
           </data>
