expand typing a bit

--- a/templates/delta-diff.html
+++ b/templates/delta-diff.html
@@ -9,7 +9,10 @@
     <content class="diff">
       <context>
       <With Patch>
-        <Header>
+        <With Header>
+        <context><Title></context>
+        <p><Message></p>
+        </With>
         <diff>
         <_patch.html>
         </diff>
