pretty up side by side diffs a bit more

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -20,11 +20,12 @@
           </data>
         </commit>
       </With>
+    </content>
 
+    <content class="diff">
       <For Comments>
       <_comment.html>
       </For>
-
       <diff>
       <_patch.html>
       </diff>
