use REMOTE_ADDR when user isn't valid

--- a/templates/diff-new.html
+++ b/templates/diff-new.html
@@ -28,7 +28,7 @@
           <textarea name="desc" placeholder="Additional information about this patch suggestion"><Desc ORNULL></textarea>
           <buttons>
             <button name="submit">Submit</button>
-            <button name="preview">Preview</button>
+            <button name="preview">Preview (does nothing)</button>
           </buttons>
         </form>
     </content>
