--- a/templates/_comment.html
+++ b/templates/_comment.html
@@ -3,5 +3,10 @@
     <Author>
     <date><Date></date>
   </context>
-  <message><Message></message>
+  <message>
+    <Message>
+    <With DirectReply>
+    <a class="muted reply" href="<Uri>">Reply</a>
+    </With>
+  </message>
 </comment>
