enable building recursive templates

--- a/templates/_comment_direct_reply.html
+++ b/templates/_comment_direct_reply.html
@@ -20,7 +20,7 @@
       </context>
 
       <comments>
-        <Build Comments _comment_thread.html />
+        <Build Comments comment_thread.html />
         <form class="pretty" action="add-comment" method="POST">
           <context><CurrentUsername></context>
           <textarea name="comment"></textarea>
