--- a/templates/_comment_thread.html
+++ b/templates/_comment_thread.html
@@ -1,3 +1,4 @@
+<For Thread>
 <comment>
   <context>
     <Author>
@@ -9,4 +10,6 @@
     <a class="muted reply" href="<Uri>">Reply</a>
     </With>
   </message>
+  <With SubThread><Build Comments _comment_thread.html /></With>
 </comment>
+</For>
