--- a/templates/commit.html
+++ b/templates/commit.html
@@ -23,9 +23,7 @@
     </content>
 
     <content class="diff">
-      <For Comments>
-      <_comment.html>
-      </For>
+      <Build Comments _comment_thread.html />
       <diff>
       <_patch.html>
       </diff>
