--- a/templates/delta-issue.html
+++ b/templates/delta-issue.html
@@ -13,11 +13,9 @@
         <desc><Desc></desc>
       </issue>
       <comments>
-        <For Comments>
-          <_comment.html>
-        </For>
+        <Build Comments _comment_thread.html />
         <form class="pretty" action="add-comment" method="POST">
-          <context><Current_username ORNULL></context>
+          <context><CurrentUsername ORNULL></context>
           <textarea name="comment"></textarea>
           <button type="submit" name="comment">Comment</button>
           <input type="hidden" name="did" value="<Delta_id>" />
