--- a/static/main.css
+++ b/static/main.css
@@ -608,6 +608,7 @@ comment {
 		margin: 0 10px;
 		padding: 2px 15px;
 		background: #333;
+		white-space: pre;
 		&.red {
 			background: #433;
 		}
