add nullable usize to templates

--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -2,6 +2,6 @@
       <li><a href="/user">owner</a></li>
       <li><a href="/network">network</a></li>
       <For NavButtons>
-      <li><a href="<Url>"><Name><sup><Extra ORNULL></sup></a></li>
+      <li><a href="<Url>"><Name /><sup><Extra type="?usize" /></sup></a></li>
       </For>
       <li><NavAuth></li>
