rename commit-flex.html journal row to be namespaced

--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -31,7 +31,7 @@
           <Group>
         </intro>
         <Lead ORNULL>
-        <For Rows>
+        <For JournalRows>
           <journal>
             <span><a href="/repo/<Repo>/commit/<Sha>"><Sha></a>: <Title></span>
             <span>
