--- a/templates/blob.html
+++ b/templates/blob.html
@@ -8,9 +8,12 @@
     <_body_header.html>
     <content>
       <blob>
-      <a class="btn" href="/repo/<Repo>/blame/<Uri_filename>">blame</a>
+        <a class="btn" href="/repo/<Repo>/blame/<UriFilename>">blame</a>
         <header><Filename></header>
-        <Blob>
+        <div class="code-block"><code><For BlobLines>
+<ln num="<Num type=usize >" id="L<Num type=usize >" href="#L<Num type=usize >"><Line /></ln>
+</For></code>
+        </div>
       </blob>
     </content>
   </body>
