--- a/templates/tree.html
+++ b/templates/tree.html
@@ -9,11 +9,11 @@
     <content>
       <div class="act-btns">
         <With Upstream>
-        <a class="btn" href="<URI>">Go To Upstream</a>
+        <a class="btn" href="<Uri>">Go To Upstream</a>
         </With>
-        <a class="btn" href="/repo/<Repo_name>/commits">commits</a>
-        <a class="btn" href="/repo/<Repo_name>/issues/new">New Issue</a>
-        <a class="btn" href="/repo/<Repo_name>/diffs/new">Suggest Diff</a>
+        <a class="btn" href="/repo/<RepoName>/commits">commits</a>
+        <a class="btn" href="/repo/<RepoName>/issues/new">New Issue</a>
+        <a class="btn" href="/repo/<RepoName>/diffs/new">Suggest Diff</a>
       </div>
       <Repo>
       <Readme ORNULL>
