convert issues and diffs to typed page

--- a/templates/delta-diff.html
+++ b/templates/delta-diff.html
@@ -10,7 +10,7 @@
       <context>
       <With Patch>
         <With Header>
-        <context><Title></context>
+        <context><Title /></context>
         <p><Message></p>
         </With>
         <diff>
