--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <_body_header.html>
-    <content>
+    <content class="mw">
       <h3><TotalHits> commits across <CheckedRepos> repos!</h3>
       <div class="commit-flex">
         <!--For Flexes_-->
