--- a/static/main.css
+++ b/static/main.css
@@ -40,7 +40,6 @@ h1,h2,h3 { margin: 0 }
 	color: #bbb;
 	font-family: 'Titillium Web', sans-serif;
 	font-size: 80%;
-	margin: 6px 0 0;
 }
 
 header {
@@ -74,8 +73,14 @@ content {
 	display: block;
 	margin: auto;
 	text-align: center;
-	max-width: 1050px;
+	width: fit-content;
+	&.mw{
+		width: 1050px;
+	}
 
+	header {
+		max-width: none;
+	}
 	h3 { text-align: left; }
 	&.diff {
 		display: flex;
@@ -113,11 +118,18 @@ code {
 	display: inline-block;
 	font-family: "Ubuntu Mono", monospace, sans-serif;
 	text-align: left;
-	white-space: pre;
 	width: 100%;
 	.blame-line {
 		display: block;
 		.blame-header {
+			color: #aaa;
+			a {
+				color: #aaa;
+			}
+			.muted {
+				color: #888;
+			}
+			display: inline-block;
 			sha {
 				width: 5em;
 				display: inline-block;
@@ -126,18 +138,25 @@ code {
 				width: 8em;
 				display: inline-block;
 			}
+			time {
+				width: 6.6em;
+				display: inline-block;
+				text-align: right;
+			}
 		}
 	}
 
 	ln {
-		width: 100%;
+		white-space: pre;
 		display: inline-block;
 		&:before {
 			content: attr(num);
 			width: 3em;
 			display: inline-block;
 		}
-		&:target { background-color: #222; }
+		&:target {
+			background-color: #222;
+		}
 	}
 }
 
