--- a/templates/repos.html
+++ b/templates/repos.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <_body_header.html>
-    <content>
+    <content class="mw">
       <With Buttons><Buttons></With>
       <repos>
       <For RepoList>
