--- a/templates/tree.html
+++ b/templates/tree.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <_body_header.html>
-    <content>
+    <content class="mw">
       <div class="act-btns">
         <With Upstream>
         <a class="btn" href="<Uri>">Go To Upstream</a>
