rename keyword to something better

--- a/templates/_patch.html
+++ b/templates/_patch.html
@@ -5,8 +5,7 @@
 	    <strong><DiffStat ORELSE Diff Stat Missing></strong>
           </header>
           <changes>
-            <ForRow DiffLines>
-</ForRow>
+            <Split DiffLines />
           </changes>
         </patch>
         </For>
