rewrite template printing code to new typed html syntax

--- a/templates/5XX.html
+++ b/templates/5XX.html
@@ -18,7 +18,7 @@ really weird, because it was so full of life just the other day!</p>
 that's just more blame for you! Is that a risk you're willing to take?!</p>
 <p>If you are the system administrator you should already know why <br/>
 it's broken what are you still reading this for?!</p>
-<p><ErrorString ORNULL></p>
+<p><ErrorString ornull></p>
 <p><em>Never in your debt, Aye-Aye-Ron from Human Resources.</em></p>
 </body>
 </html>
