--- a/templates/blame.html
+++ b/templates/blame.html
@@ -13,7 +13,7 @@
         <code>
           <For BlameLines><span class="blame-line">
             <span class="blame-header">
-              <time><Time ORNULL></time>
+              <time><Time ornull></time>
               <a href="/repo/<RepoName>/commit/<Sha>"><Sha>&nbsp;</a>
               <With AuthorEmail><author class="muted"><a href="/user?user=<Email>"><Author></a></author></With>
             </span>
