--- a/templates/commit-list.html
+++ b/templates/commit-list.html
@@ -10,8 +10,8 @@
       <For Commits>
         <commit>
           <data>
-            <a href="<Uri ORELSE #>" class=muted><Sha></a>
-            <span><MsgTitle ORNULL></span>
+            <a href="<Uri>" class=muted><Sha></a>
+            <span><MsgTitle ornull></span>
             <br />
             <Msg>
           </data>
