--- a/templates/delta-list.html
+++ b/templates/delta-list.html
@@ -9,7 +9,7 @@
     <content>
       <search>
         <form action="/search" style="width:95%">
-          <input name="q" type="text" placeholder="Search" value="<Search ORNULL>" style="width:97%">
+          <input name="q" type="text" placeholder="Search" value="<Search ornull>" style="width:97%">
         </form>
         <a class="btn" href="new" style="width:5%">New</a>
       </search>
