--- a/templates/gist.html
+++ b/templates/gist.html
@@ -9,9 +9,9 @@
     <content>
       <For GistFiles>
         <blob>
-        <header><FileName ORNULL></header>
+        <header><FileName ornull></header>
         <code>
-          <FileBlob ORNULL>
+          <FileBlob ornull>
         </code>
         </blob>
       </For>
