--- a/templates/gist_new.html
+++ b/templates/gist_new.html
@@ -11,9 +11,9 @@
         <For GistFiles>
         <div class="block">
         <label>File Name</label>
-        <input name="file_name" value="<Name ORNULL>"/>
+        <input name="file_name" value="<Name ornull>"/>
         <br>
-        <textarea name="file_blob" cols="100" rows="<Count ORELSE 10>"><Blob ORNULL></textarea>
+        <textarea name="file_blob" cols="100" rows="<Count default='10'>"><Blob ornull></textarea>
         </div>
 
         </For>
