--- a/templates/settings.html
+++ b/templates/settings.html
@@ -13,7 +13,7 @@
         <label>Block Name</label>
         <input name="block_name" value="<ConfigName ORELSE default>"/>
         <br>
-        <textarea name="block_text" cols="100" rows="<Count ORELSE 10>"><ConfigText ORNULL></textarea>
+        <textarea name="block_text" cols="100" rows="<Count ORELSE 10>"><ConfigText ornull></textarea>
         </div>
 
         </For>
