--- a/templates/tree.html
+++ b/templates/tree.html
@@ -16,7 +16,7 @@
         <a class="btn" href="/repo/<RepoName>/diffs/new">Suggest Diff</a>
       </div>
       <Repo>
-      <Readme ORNULL>
+      <Readme ornull>
     </content>
   </body>
 </html>
