--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -30,7 +30,7 @@
         <intro>
           <Group>
         </intro>
-        <Lead ORNULL>
+        <Lead ornull>
         <For JournalRows>
           <journal>
             <span><a href="/repo/<Repo>/commit/<Sha>"><Sha></a>: <Title></span>
