--- a/templates/repo-tags.html
+++ b/templates/repo-tags.html
@@ -11,9 +11,9 @@
         <With Upstream>
         <a class="btn" href="<URI>">Go To Upstream</a>
         </With>
-        <a class="btn" href="<Repo_name ORNULL>/commits">commits</a>
-        <a class="btn" href="<Repo_name ORNULL>/issues/new">New Issue</a>
-        <a class="btn" href="<Repo_name ORNULL>/diffs/new">Suggest Diff</a>
+        <a class="btn" href="<Repo_name ornull>/commits">commits</a>
+        <a class="btn" href="<Repo_name ornull>/issues/new">New Issue</a>
+        <a class="btn" href="<Repo_name ornull>/diffs/new">Suggest Diff</a>
       </div>
 
       <For Tags>
