--- a/templates/repos.html
+++ b/templates/repos.html
@@ -12,7 +12,7 @@
       <For RepoList>
         <repo>
           <name><a href="<Uri>"><Name></a></name>
-            <desc><Desc ORNULL><p class="upstream"><Upstream ORNULL></p>
+            <desc><Desc ornull><p class="upstream"><Upstream ornull></p>
             <div class="updated"><span><Updated></span><With Tag><a href="<Uri>" title="<Title>"><Tag></a></With></div>
           </desc><last></last>
         </repo>
