--- a/static/main.css
+++ b/static/main.css
@@ -84,7 +84,7 @@ content {
 	h3 { text-align: left; }
 	&.diff {
 		display: flex;
-		justify-content: center;
+		justify-content: space-between;
 		gap: 1em;
 		width: unset;
 		max-width: 96%;
@@ -426,12 +426,68 @@ patchheader {
 }
 
 patch {
-	& > header {
+	header {
 		border-radius: 3px 3px 0 0;
-		border-top: #7a003f solid 1px;
+		border-top: 1px solid #780000;
+		border-left: 1px solid #737373;
+		border-bottom: 1px solid black;
+		border-right: 1px solid #888;
 		background-color: #686868;
-		padding: 4px;
+		padding: 8px 4px;
 		width: auto;
+	}
+
+	changes {
+		font-family: "Ubuntu Mono", monospace, sans-serif;
+		font-size: 0.8em;
+		border-top: 0px;
+		border-bottom: 2px #555 solid;
+		border-left: 1px solid #888;
+		border-right: 1px solid #666;
+		display: block;
+		text-align: left;
+		background: #333;
+		span {
+			white-space: pre;
+			&.split {
+				white-space: pre;
+				width: 100%;
+				margin: 0;
+				display: inline-block;
+				span {
+					margin: 0;
+					width: 50%;
+					display: inline-block;
+					overflow: scroll;
+				}
+			}
+			&.del { background: #5b0000 }
+			&.add { background: #003e00 }
+			:first-child {
+				margin: 0;
+			}
+			.block {
+				&:first-child {
+					margin-top: 0;
+				}
+				border-top: 1px solid #999;
+				border-bottom: 2px solid #222;
+				background: #569;
+				/* background: #4a4a91; might want to revert to this color */
+				display: block;
+				width: auto;
+				margin: 8px auto;
+				padding: 8px;
+			}
+		}
+	}
+	.buttons {
+		background: #333;
+		border: 1px gray solid;
+		border-top: 0px;
+		display: block;
+		height: 25px;
+		padding: 4px 0 4px 12px;
 	}
 	margin: 2rem 0 10rem;
 	border-radius: 4px 4px 0 0;
@@ -484,54 +540,6 @@ diff {
 		justify-content: space-between;
 		height: 1.5em;
 		padding: 4px 12px;
-	}
-	changes {
-		font-family: "Ubuntu Mono", monospace, sans-serif;
-		font-size: 0.8em;
-		border: 1px solid gray;
-		display: block;
-		text-align: left;
-		background: #333;
-		span {
-			white-space: pre;
-			&.split {
-				white-space: pre;
-				width: 100%;
-				margin: 0;
-				display: inline-block;
-				span {
-					margin: 0;
-					width: 50%;
-					display: inline-block;
-				}
-				span.block {
-					background: #4a4a91;
-					display: block;
-					width: auto;
-					margin: 8px auto;
-					padding: 8px;
-				}
-			}
-			margin: 0 8px;
-			&.del { background: #5b0000 }
-			&.add { background: #003e00 }
-			.block {
-				/* background: #4a4a91; might want to revert to this color */
-				background: #569;
-				display: block;
-				width: auto;
-				margin: 8px auto;
-				padding: 8px;
-			}
-		}
-	}
-	.buttons {
-		background: #333;
-		border: 1px gray solid;
-		border-top: 0px;
-		display: block;
-		height: 25px;
-		padding: 4px 0 4px 12px;
 	}
 }
 
@@ -589,15 +597,20 @@ comment {
 	context {
 		background: #333;
 		border-radius: 3px 3px 0 0;
-		border: 1px gray solid;
-		border-bottom: 0px;
+		border-top: 1px solid #737373;
+		border-left: 1px solid #737373;
+		border-bottom: 1px black solid;
+		border-right: 1px #444 solid;
 		display: flex;
 		justify-content: space-between;
 		height: 1.5em;
 		padding: 4px 12px;
 	}
 	message {
-		border: 1px solid gray;
+		border-top: 1px solid #737373;
+		border-left: 1px solid #737373;
+		border-bottom: 1px #444 solid;
+		border-right: 1px #444 solid;
 		display: block;
 		padding: 8px;
 		overflow: auto
