fix alignment in commit view

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -22,7 +22,7 @@
       </With>
     </content>
 
-    <content class="diff">
+    <content>
       <Build Comments _comment_thread.html />
       <diff>
       <_patch.html>
