--- a/templates/gist.html
+++ b/templates/gist.html
@@ -8,12 +8,12 @@
     <_body_header.html>
     <content>
       <For GistFiles>
-        <blob>
+        <gist>
         <header><FileName ornull></header>
         <code>
           <FileBlob ornull>
         </code>
-        </blob>
+        </gist>
       </For>
     </content>
   </body>
