use Build throughout replacing shorthand

--- a/templates/_comment_direct_reply.html
+++ b/templates/_comment_direct_reply.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>srctree</title>
-    <_meta_head.html>
+    <Build MetaHead _meta_head.html />
   </head>
   <body>
-    <_body_header.html>
+    <Build BodyHeader _body_header.html />
     <content class="diff">
       <context>
       <With Patch>
@@ -14,7 +14,7 @@
         <p><Message></p>
         </With>
         <diff>
-        <_patch.html>
+        <Build Patch _patch.html />
         </diff>
       </With>
       </context>
