--- a/templates/_comment_thread.html
+++ b/templates/_comment_thread.html
@@ -10,6 +10,6 @@
     <a class="muted reply" href="<Uri>">Reply</a>
     </With>
   </message>
-  <With SubThread><Build Comments _comment_thread.html /></With>
+  <With SubThread><!-- <Build Comments _comment_thread.html />--></With>
 </comment>
 </For>
