--- a/templates/commit.html
+++ b/templates/commit.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>srctree</title>
-    <_meta_head.html>
+    <Build MetaHead _meta_head.html />
   </head>
   <body>
-    <_body_header.html>
+    <Build BodyHeader _body_header.html />
     <content>
       <With Commit>
         <commit>
@@ -25,7 +25,7 @@
     <content>
       <Build Comments _comment_thread.html />
       <diff>
-      <_patch.html>
+      <Build Patch _patch.html />
       </diff>
     </content>
   </body>
