--- a/templates/tree.html
+++ b/templates/tree.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>srctree</title>
-    <_meta_head.html>
+    <Build MetaHead _meta_head.html />
   </head>
   <body>
-    <_body_header.html>
+    <Build BodyHeader _body_header.html />
     <content class="mw">
       <div class="act-btns">
         <With Upstream>
