--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>srctree</title>
-    <_meta_head.html>
+    <Build MetaHead _meta_head.html />
   </head>
   <body>
-    <_body_header.html>
+    <Build BodyHeader _body_header.html />
     <content class="mw">
       <h3><TotalHits> commits across <CheckedRepos> repos!</h3>
       <div class="commit-flex">
