don't crash with new Verse API

--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -4,4 +4,4 @@
       <For NavButtons>
       <li><a href="<Url>"><Name /><sup><Extra type="?usize" /></sup></a></li>
       </For>
-      <li><NavAuth></li>
+      <li><NavAuth default="Public" /></li>
