--- a/templates/blame.html
+++ b/templates/blame.html
@@ -9,7 +9,7 @@
     <content>
       <blob>
         <header><Filename></header>
-        <div class="code-block">
+        <div class="codeblock">
         <code>
           <For BlameLines><span class="blame-line">
             <span class="blame-header">
