--- a/templates/blob.html
+++ b/templates/blob.html
@@ -10,7 +10,7 @@
       <blob>
         <a class="btn" href="/repo/<Repo>/blame/<UriFilename>">blame</a>
         <header><Filename></header>
-        <div class="code-block"><code><For BlobLines>
+        <div class="codeblock"><code><For BlobLines>
 <ln num="<Num type=usize >" id="L<Num type=usize >" href="#L<Num type=usize >"><Line /></ln>
 </For></code>
         </div>
