add css hack until markdown parsing is improved

--- a/static/main.css
+++ b/static/main.css
@@ -261,7 +261,11 @@ readme {
 		text-align: left;
 	}
 	.codeblock {
-		white-space: pre
+		white-space: pre;
+	}
+	/* TODO remove */
+	code {
+		white-space: pre;
 	}
 }
 
