--- a/templates/commit.html
+++ b/templates/commit.html
@@ -21,6 +21,8 @@
         </commit>
       </With>
 
+      <div style="width: 100%"><span class="toggle"><a class="<InlineActive ornull />" href="?inline=true">inline</a><a class="<SplitActive ornull />" href="?inline=false">split</a></span></div>
+
       <Build Comments _comment_thread.html />
       <diff>
       <Build Patch _patch.html />
