--- a/templates/_patch.html
+++ b/templates/_patch.html
@@ -1,8 +1,8 @@
 	<For Files>
         <patch>
           <header>
-            <Filename ORELSE No Filename found>
-	    <strong><DiffStat ORELSE Diff Stat Missing></strong>
+            <Filename />
+	    <strong><DiffStat /></strong>
           </header>
           <changes>
             <Split DiffLines />
