--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -22,7 +22,7 @@
         </div>
         <For FlexWeeks><div class="col">
           <div class="month"><Month default="&nbsp;" /></div>
-          <For Days><div class="day<Class/>" title="<Title />"></div></For>
+          <For Days exact="7"><div class="day<Class/>" title="<Title />"></div></For>
         </div></For>
         <h3 style="float: right"><CurrentStreak></h3>
       </div>
