refactor user flex a bit more
I had a reason that I wanted to do this... but now, I don't even
remember why I started this :/

--- a/templates/user_commits.html
+++ b/templates/user_commits.html
@@ -38,7 +38,7 @@
             <span><a href="/repo/<Repo>/commit/<Sha>"><Sha></a>: <Title></span>
             <span>
               <span>in <a href="/repo/<Repo>"><Repo></a></span>
-              <span>on <Date></span>
+              <span>on <span><Day /></span><span><Weekday /></span><span><Time /></span></span>
             </span>
             <!--span><Sha></span-->
           </journal>
