parse commit body as markdown & clean up commit allocs

--- a/templates/commit.html
+++ b/templates/commit.html
@@ -11,12 +11,12 @@
         <commit>
           <top>
             <author><Author></author>
-            <span>parent <For Parents><a href="<ParentUri>"><ParentShaShort></a> </For></span>
+            <span>parent <For Parents><a href="/repo/<Repo />/commit/<ParentShaShort />"><ParentShaShort /></a> </For></span>
           </top>
           <data>
-            <a href="<ShaUri>"><ShaShort></a><br>
+            <a href="/repo/<Repo />/commit/<ShaShort>"><ShaShort></a><br>
             <Title><br><br>
-            <Body>
+            <Body />
           </data>
         </commit>
       </With>
