I hate web development

--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -1,6 +1,6 @@
-      <li><a href="/repos">repos</a></li>
-      <li><a href="/user">owner</a></li>
-      <li><a href="/network">network</a></li>
+      <li><a href="/repos">repos<sup></sup></a></li>
+      <li><a href="/user">owner<sup></sup></a></li>
+      <li><a href="/network">network<sup></sup></a></li>
       <For NavButtons>
       <li><a href="<Url>"><Name /><sup><Extra type="?usize" /></sup></a></li>
       </For>
