--- a/static/main.css
+++ b/static/main.css
@@ -54,17 +54,17 @@ header {
 		font-size: 300%;
 		margin: 0 0 16px 0;
 	}
-	a {
-		font-size: 108%;
-		padding: 0 1rem;
-		border-bottom: #7a003f solid 2px;
-		border-radius: 0 0 2px 2px;
-	}
 	> ul {
 		display: flex;
 		justify-content: space-between;
 		> li {
-			padding: 0 0.3rem;
+			margin: 0 0.3rem;
+			border-bottom: #7a003f solid 2px;
+			border-radius: 0 0 2px 2px;
+			a {
+				font-size: 108%;
+				padding: 0 1rem;
+			}
 		}
 	}
 }
